fixes sharetoggle on child z-index

--- a/css/global.scss
+++ b/css/global.scss
@@ -4895,7 +4895,7 @@ margin-right: 10px;
 
 #shareToggle{
   margin-right: 0px;
-
+z-index: 2;
 }
 
   .jssocials-shares{
